# archive-news

./: .gitignore  README.md  apply_changes.py  debug_gmail.py  gemini-issue-responder.yml  generate_newsletter_viewer.py  injector.py  optimize.py  patch_viewers.py  patch_viewers_v2.py  patch_viewers_v3.py  patch_viewers_v4.py  process_email.py  pyproject.toml  requirements.txt  test_parser.py
.github/workflows/: check_mail.yml  gemini-issue-responder.yml
docs/: 93408fcb31.html  Offrez_un_colis_de_.html  fc7b293c42.html  index.html  viewer.css  viewer.js
docs/0095a3e7cf89/: index.html  metadata.json
docs/01773d58cf7f/: index.html  metadata.json
docs/01b0b4e0068c/: index.html  metadata.json
docs/064a57ab1948/: index.html  metadata.json
docs/07b1ca3050ce/: index.html  metadata.json
docs/084229ed0e81/: index.html  metadata.json
docs/0a7817c3400c/: index.html  metadata.json
docs/0d2c59c109d7/: index.html  metadata.json
docs/0dde04f4d0cc/: index.html  metadata.json
docs/0ed5528886ab/: index.html  metadata.json
docs/1038d04a25/: index.html
docs/108d9e4a76da/: index.html  metadata.json
docs/10a25f39c79a/: index.html
docs/12373f0b2a37/: index.html  metadata.json
docs/15b18a545e02/: index.html  metadata.json
docs/1745eb834f66/: index.html  metadata.json
newsletter_archive/: cli.py  config.py  db.py  logging_conf.py  models.py  retry.py
src/: generator.py  imap_client.py  parser.py
templates/: index.html  viewer.html
tests/: test_cli.py  test_config.py  test_db_schema.py  test_logging.py  test_models.py  test_retry.py  test_smoke.py
(+222 files in other folders)
