[project]
name = "newsletter-archive"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "requests>=2.31",
  "jinja2>=3.1",
  "boto3>=1.34",
  "pydantic-settings>=2.2",
  "tldextract>=5.1",
  "playwright>=1.44",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
archive = "newsletter_archive.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
